--- a/index.html
+++ b/index.html
@@ -6,45 +6,65 @@
     <title>Pomodoro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Schoolbell&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container text-center my-4">
-        <h1 class="mb-4" style="color: rgb(19, 194, 224)">Pomodoro Timer</h1>
-        <div class="card bg-light py-4" style="background-color: #a37ab4 !important;">
+        <h1 class="mb-4" style="color: rgb(19, 194, 224); font-family: Grandstander; font-size:60px;">Pomodoro Timer</h1>
+        <div class="card bg-light py-4" style="background-color: #d1cfe2 !important;">
             <div class="card-body">
                 <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
-                      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true" style="color: white">Pomodoro</button>
+                      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true" style="color: #f07ba0; font-weight: bold; font-family: Playfair Display; font-size: 18px;">Pomodoro</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false" style="color: white">Short Break</button>
+                      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false" style="color: #a87bf0; font-weight: bold; font-family: Playfair Display; font-size: 18px">Short Break</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                      <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false" style="color: white">Long Break</button>
+                      <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false" style="color: #f7de6f; font-weight: bold; font-family: Playfair Display; font-size: 18px">Long Break</button>
                     </li>
                   </ul>
                   <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
                         <h2 id="timer" class="display-1 mb-5">25:00</h2>
-                        <button id ="start" type="button" class="btn btn-success px-4 me-2">Start</button> 
-                        <button id ="stop" type="button" class="btn btn-danger px-4 me-2">Stop</button>
-                        <button id ="reset" type="button" class="btn btn-secondary px-4">Reset</button>
+                        <button id ="start" type="button" class="btn px-4 me-2" style="background-color: #79f887; font-family: Grandstander;">Start</button> 
+                        <button id ="stop" type="button" class="btn px-4 me-2" style="background-color: #ff8fab; font-family: Grandstander;">Stop</button>
+                        <button id ="reset" type="button" class="btn px-4" style="background-color: #adadad; font-family: Grandstander;">Reset</button>
                     </div>
                     <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
                         <h2 id="timerShort" class="display-1 mb-5">05:00</h2>
-                        <button id ="startShort" type="button" class="btn btn-success px-4 me-2">Start</button> 
-                        <button id ="stopShort" type="button" class="btn btn-danger px-4 me-2">Stop</button>
-                        <button id ="resetShort" type="button" class="btn btn-secondary px-4">Reset</button>
+                        <button id ="startShort" type="button" class="btn px-4 me-2" style="background-color: #79f887; font-family: Grandstander;">Start</button> 
+                        <button id ="stopShort" type="button" class="btn px-4 me-2" style="background-color: #ff8fab; font-family: Grandstander;">Stop</button>
+                        <button id ="resetShort" type="button" class="btn px-4" style="background-color: #adadad; font-family: Grandstander;">Reset</button>
                     </div>
                     <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
                         <h2 id="timerLong" class="display-1 mb-5">15:00</h2>
-                        <button id ="startLong" type="button" class="btn btn-success px-4 me-2">Start</button> 
-                        <button id ="stopLong" type="button" class="btn btn-danger px-4 me-2">Stop</button>
-                        <button id ="resetLong" type="button" class="btn btn-secondary px-4">Reset</button>
+                        <button id ="startLong" type="button" class="btn px-4 me-2" style="background-color: #79f887; font-family: Grandstander;">Start</button> 
+                        <button id ="stopLong" type="button" class="btn px-4 me-2" style="background-color: #ff8fab; font-family: Grandstander;">Stop</button>
+                        <button id ="resetLong" type="button" class="btn px-4" style="background-color: #adadad; font-family: Grandstander;">Reset</button>
                     </div>
                   </div>
             </div>
         </div>
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+      <symbol id="check-circle-fill" viewBox="0 0 16 16">
+        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+      </symbol>
+    </svg>
+    <div class="row">
+    <div class="alert alert-info d-flex align-items-center alert-dismissable fade show col-md-4" role="alert">
+      <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Success:" style="width: 4%; height: auto"><use xlink:href="#check-circle-fill"/></svg>
+      <div style="font-size: 20px;">
+        5 minutes left !!!!
+      </div>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
