--- a/index.html
+++ b/index.html
@@ -52,20 +52,19 @@
             </div>
         </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-      <symbol id="check-circle-fill" viewBox="0 0 16 16">
-        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-      </symbol>
-    </svg>
-    <div class="row">
-    <div class="alert alert-info d-flex align-items-center alert-dismissable fade show col-md-4" role="alert">
-      <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Success:" style="width: 4%; height: auto"><use xlink:href="#check-circle-fill"/></svg>
-      <div style="font-size: 20px;">
-        5 minutes left !!!!
+    <!-- Flexbox container for aligning the toasts -->
+<div aria-live="polite" aria-atomic="true" class="d-flex justify-content-md-end align-items-center w-100">
+
+  <!-- Then put toasts within -->
+  <div class="toast show align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="d-flex" style="background-color: mediumspringgreen !important">
+      <div class="toast-body" style="font-weight: bold; font-size: 20px;">
+        5 minutes left!
       </div>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-    </div>
+  </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
