--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pomodoro</title>
+    <title>pomodoro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Schoolbell&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <div class="container text-center my-4">
         <h1 class="mb-4" style="color: rgb(19, 194, 224); font-family: Grandstander; font-size:60px;">Pomodoro Timer</h1>
         <div class="card bg-light py-4" style="background-color: #d1cfe2 !important;">
@@ -52,19 +53,34 @@
             </div>
         </div>
     </div>
-    <!-- Flexbox container for aligning the toasts -->
-<div aria-live="polite" aria-atomic="true" class="d-flex justify-content-md-end align-items-center w-100">
 
-  <!-- Then put toasts within -->
-  <div class="toast show align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="d-flex" style="background-color: mediumspringgreen !important">
-      <div class="toast-body" style="font-weight: bold; font-size: 20px;">
-        5 minutes left!
+    <!-- '5 minutes left' toast-->>
+    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-md-end align-items-center w-100">
+      <div class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true" id="5minleft">
+        <div class="d-flex" style="background-color: mediumspringgreen !important">
+          <div class="toast-body" style="font-weight: bold; font-size: 20px;">
+            5 minutes left!
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
       </div>
-      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-  </div>
-</div>
+    <!-- '1 minute left' toast -->
+    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-md-end align-items-center w-100">
+      <div class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true" id="1minleft">
+        <div class="d-flex" style="background-color: crimson !important">
+          <div class="toast-body" style="font-weight: bold; font-size: 20px;">
+            1 minute left!
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
+
+    <audio autoplay loop>
+      <source src="">
+    </audio>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
