--- a/index.html
+++ b/index.html
@@ -13,51 +13,65 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Schoolbell&display=swap" rel="stylesheet">
 </head>
-<body>
-
+<body id="background">
     <div class="container text-center my-4">
-        <h1 class="mb-4" style="color: rgb(19, 194, 224); font-family: Grandstander; font-size:60px;">Pomodoro Timer</h1>
+        <h1 class="mb-4" id="title-text" style="color: #13c2e0; font-family: Grandstander; font-size:60px;">Pomodoro Timer</h1>
         <div class="card bg-light py-4" style="background-color: #d1cfe2 !important;">
-            <div class="card-body">
-                <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
-                    <li class="nav-item" role="presentation">
-                      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true" style="color: #f07ba0; font-weight: bold; font-family: Playfair Display; font-size: 18px;">Pomodoro</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false" style="color: #a87bf0; font-weight: bold; font-family: Playfair Display; font-size: 18px">Short Break</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                      <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false" style="color: #f7de6f; font-weight: bold; font-family: Playfair Display; font-size: 18px">Long Break</button>
-                    </li>
-                  </ul>
-                  <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-                        <h2 id="timer" class="display-1 mb-5">25:00</h2>
-                        <button id ="start" type="button" class="btn px-4 me-2" style="background-color: #79f887; font-family: Grandstander;">Start</button> 
-                        <button id ="stop" type="button" class="btn px-4 me-2" style="background-color: #ff8fab; font-family: Grandstander;">Stop</button>
-                        <button id ="reset" type="button" class="btn px-4" style="background-color: #adadad; font-family: Grandstander;">Reset</button>
-                    </div>
-                    <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
-                        <h2 id="timerShort" class="display-1 mb-5">05:00</h2>
-                        <button id ="startShort" type="button" class="btn px-4 me-2" style="background-color: #79f887; font-family: Grandstander;">Start</button> 
-                        <button id ="stopShort" type="button" class="btn px-4 me-2" style="background-color: #ff8fab; font-family: Grandstander;">Stop</button>
-                        <button id ="resetShort" type="button" class="btn px-4" style="background-color: #adadad; font-family: Grandstander;">Reset</button>
-                    </div>
-                    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-                        <h2 id="timerLong" class="display-1 mb-5">15:00</h2>
-                        <button id ="startLong" type="button" class="btn px-4 me-2" style="background-color: #79f887; font-family: Grandstander;">Start</button> 
-                        <button id ="stopLong" type="button" class="btn px-4 me-2" style="background-color: #ff8fab; font-family: Grandstander;">Stop</button>
-                        <button id ="resetLong" type="button" class="btn px-4" style="background-color: #adadad; font-family: Grandstander;">Reset</button>
-                    </div>
-                  </div>
+          <div class="card-body">
+            <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link active" id="study-time" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true" style="color: #f07ba0; font-weight: bold; font-family: Playfair Display; font-size: 18px;">Pomodoro</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="short-break" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false" style="color: #a87bf0; font-weight: bold; font-family: Playfair Display; font-size: 18px">Short Break</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="long-break" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false" style="color: #f7de6f; font-weight: bold; font-family: Playfair Display; font-size: 18px">Long Break</button>
+                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+                <br>
+                <h2 id="timer" class="display-1 mb-5">25:00</h2>
+                <button id ="start" type="button" class="btn px-4 me-2" style="background-color: #79f887; font-family: Grandstander;">Start</button> 
+                <button id ="stop" type="button" class="btn px-4 me-2" style="background-color: #ff8fab; font-family: Grandstander;">Stop</button>
+                <button id ="reset" type="button" class="btn px-4" style="background-color: #adadad; font-family: Grandstander;">Reset</button>
+              </div>
+              <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                <br>
+                <h2 id="timerShort" class="display-1 mb-5">05:00</h2>
+                <button id ="startShort" type="button" class="btn px-4 me-2" style="background-color: #79f887; font-family: Grandstander;">Start</button> 
+                <button id ="stopShort" type="button" class="btn px-4 me-2" style="background-color: #ff8fab; font-family: Grandstander;">Stop</button>
+                <button id ="resetShort" type="button" class="btn px-4" style="background-color: #adadad; font-family: Grandstander;">Reset</button>
+              </div>
+              <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                <br>
+                <h2 id="timerLong" class="display-1 mb-5">15:00</h2>
+                <button id ="startLong" type="button" class="btn px-4 me-2" style="background-color: #79f887; font-family: Grandstander;">Start</button> 
+                <button id ="stopLong" type="button" class="btn px-4 me-2" style="background-color: #ff8fab; font-family: Grandstander;">Stop</button>
+                <button id ="resetLong" type="button" class="btn px-4" style="background-color: #adadad; font-family: Grandstander;">Reset</button>
+              </div>
             </div>
+          </div>
         </div>
     </div>
 
+
+    <!-- '15 minutes left' toast-->>
+    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-md-end align-items-center w-100">
+      <div class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true" id="15minleft">
+        <div class="d-flex" style="background-color: mediumspringgreen !important">
+          <div class="toast-body" style="font-weight: bold; font-size: 20px;">
+            15 minutes left!
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+      </div>
+    </div>
     <!-- '5 minutes left' toast-->>
     <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-md-end align-items-center w-100">
       <div class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true" id="5minleft">
-        <div class="d-flex" style="background-color: mediumspringgreen !important">
+        <div class="d-flex" style="background-color: gold !important">
           <div class="toast-body" style="font-weight: bold; font-size: 20px;">
             5 minutes left!
           </div>
@@ -78,7 +92,7 @@
     </div>
 
     <audio autoplay loop>
-      <source src="">
+      <source src="jazz.mp3" type="audio/mp3">
     </audio>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
